Fixes border background covering td borders

--- a/assets/css/channel_lineup.css
+++ b/assets/css/channel_lineup.css
@@ -512,6 +512,7 @@ span.btn-feedback:hover {
 }
 
 #vsrepeat td {
+    background-clip: padding-box;
     border: 1px solid #ddd;
     border-top: none;
 }
